--- a/index.html
+++ b/index.html
@@ -45,9 +45,31 @@
 
     <!-- END  CONTACT US SECTION -->    
   </main>
-  <footer>
+  <footer class="footer">
     <!-- START FOOTER SECTION -->
-
+    <div class="container">
+      <div class="row">
+        <div class="footer-col">
+          <h4>A039</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Our Team</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Our Team</h4>
+          <ul>
+            <li><a href="#">Muhammad Jundana Albasyir</a></li>
+            <li><a href="#">Muhammad Mufti</a></li>
+            <li><a href="#">Nanga Parbat Sumarno</a></li>
+            <li><a href="#">Novia Sitorus</a></li>
+            <li><a href="#">Salmaa</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>    
     <!-- END FOOTER SECTION -->    
   </footer>
 </body>
