update banner section
tambah banner dan sedikit merubah link nya

--- a/index.html
+++ b/index.html
@@ -21,25 +21,29 @@
         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAGxJREFUSEtjZKAxYKSx+QzDxwImYFBFAbE0lYLsKdCcpUD8HxZEMUDOYioZDjMGZOZSulkAsggURLpU8sUloDnLkYOISuZiGkO3ZDqairDFIUoyHU1FOJM5LJmOpqLRVER+WUi3wo58JxLQCQCRZh4ZCw+QOAAAAABJRU5ErkJggg==" alt="menu" />
       </label>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Our Team</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="#banner">Home</a></li>
+        <li><a href="#about">About us</a></li>
+        <li><a href="#team-section">Our Team</a></li>
+        <li><a href="#contact">Contact us</a></li>
       </ul>
     </nav>
     <!-- END NAVBAR SECTION -->
   </header>
   <main>
-    <!-- START HERO SECTION -->
 
+    <!-- START HERO SECTION -->
+    <div class="banner" id = "banner">
+      <h1>Welcome to our company</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nisi nesciunt culpa omnis dolore consectetur optio odio eum dolorem eaque veritatis, iste provident voluptatem perspiciatis voluptatibus impedit tenetur rem incidunt.</p>
+    </div>
     <!-- END HERO SECTION -->
 
     <!-- START ABOUT US SECTION -->
-
+    <div class="about" id="about"></div>
     <!-- END ABOUT US SECTION -->
 
     <!-- START OUR TEAM SECTION -->
-    <div class="team">
+    <div class="team" id="team-section">
       <div class="section-team">
         <h3>Meet Our Team</h3>    
       </div>
@@ -65,7 +69,9 @@
     <!-- END  OUR TEAM SECTION -->
  
     <!-- START CONTACT US SECTION -->
-
+    <div class="contact" id="contact">
+      <!-- isi disini -->
+    </div>
     <!-- END  CONTACT US SECTION -->    
   </main>
   <footer class="footer">
@@ -75,7 +81,7 @@
         <div class="footer-col">
           <h4>A039</h4>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#banner">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Our Team</a></li>
             <li><a href="#">Contact us</a></li>
