--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <!-- START ABOUT US SECTION -->
     <div class="about" id="about"></div>
       <div class="about">
-        <h2>About Us<h2>
-        <p>The world is very appreciate with our presence. We are a group that have a good vision about technology development especially in digital technology. Make sure you will always following us, anytime, anywhere.<p>
+        <h2>About Us</h2>
+        <p>The world is very appreciate with our presence. We are a group that have a good vision about technology development especially in digital technology. Make sure you will always following us, anytime, anywhere.</p>
       </div>
            
     <!-- END ABOUT US SECTION -->
